--- a/index.html
+++ b/index.html
@@ -10,21 +10,7 @@
   <link href="index.css" rel="stylesheet">
 
   <style>
-    .node text {
-      font: 14px robot;
-      fill: #fff;
-      font-weight: bold;
-    }
 
-    .node text tspan {
-      font-weight: normal;
-    }
-
-    .link {
-      fill: none;
-      stroke: #ccc;
-      stroke-width: 2px;
-    }
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -119,7 +105,6 @@
                               </button></span>
                           </td>
                         </tr>
-                        <!-- This is our clonable table line -->
                         <tr>
                           <td class="pt-3-half user-id" contenteditable="true">bob@celsius.network</td>
                           <td class="pt-3-half user-amount" contenteditable="true">45</td>
@@ -132,7 +117,6 @@
                               </button></span>
                           </td>
                         </tr>
-                        <!-- This is our clonable table line -->
                         <tr>
                           <td class="pt-3-half user-id" contenteditable="true">ron@celsius.network</td>
                           <td class="pt-3-half user-amount" contenteditable="true">3</td>
@@ -145,7 +129,6 @@
                               </button></span>
                           </td>
                         </tr>
-                        <!-- This is our clonable table line -->
                       </tbody>
                     </table>
                     <div class="row">
@@ -198,10 +181,7 @@
                   </div>
 
                   <div class="col-md-2 offset-md-1 d-flex align-items-center">
-                    <select id='user-verify-select' class="form-select"
-                      onchange="if (this.selectedIndex) {let cmmt = computeCommitmentAndPopulate(this.value); updateGraphB(cmmt);}">
-                      <!-- <option value="" disabled selected hidden>Choose a User</option> -->
-                    </select>
+                    <select id='user-verify-select' class="form-select" ></select>
                   </div>
 
                 </div>
@@ -210,26 +190,7 @@
                   <h5 class="display-7">Compute its own commitment <i class="bi bi-pen"></i></h5>
                 </div>
 
-
-                <!-- <div class="row offset-md-1 mt-5">
-                  <h3 style="font-weight: normal">Verifer compute his commitment <i class="bi bi-pen"></i></h3>
-                </div> -->
-                <!-- <div class="row offset-md-1">
-                  <p>Select a user to compute his commitment</p>
-                </div> -->
-
-                <!-- <div class="row offset-md-1">
-                  <div class="col-md-3">
-                    <select id='user-verify-select' class="form-select"
-                      onchange="if (this.selectedIndex) computeCommitment(this.value);">
-                      <option value="" disabled selected hidden>Choose a User</option> 
-                    </select>
-                  </div>
-                </div> -->
-
-                <div class="row offset-md-1 mt-3" id="verify-commitment-compution">
-
-                </div>
+                <div class="row offset-md-1 mt-3" id="verify-commitment-compution"></div>
 
                 <div class="row offset-md-1 mt-5">
                   <h5 class="display-7">Verifer checks if he have a path to the root node <i class="bi bi-search"></i>
@@ -266,466 +227,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="start.js"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-
-
-  <script>
-
-
-    function getNodeParnetOtherChild(node) {
-      // let parent = d3.select('.node[node-name="'+ cmmt + '"]').datum().parent.data;
-      let cmmt = node.data.commitment;
-      let parent = node.parent.data;
-
-      let firstChild = parent.children[0];
-      let secondChild = parent.children[1];
-
-      if (cmmt === firstChild.commitment) {
-        return secondChild;
-      } else {
-        return firstChild;
-      }
-    }
-
-    // function getNodeParent(cmmt) {
-    //   return d3.select('.node[node-name="'+ cmmt + '"]').datum();  
-    // }
-
-    function expandAllNodesInVerifyGraph() {
-      let rootCommitment = document.getElementById("published-root-text");
-
-      let rootNode = d3.select('graph-b .node[node-name="'+ rootCommitment.innerText + '"]'); // .node().dispatchEvent(new Event('click'));
-      
-      // rescurisveExpand(rootNode);
-      rescurisveExpand(rootNode.datum());
-    }
-
-    function rescurisveExpand(node) {
-      if (!node.children) {
-        collapseNode(node.data.commitment.trim());
-      }
-
-      if (node.children) {
-        rescurisveExpand(node.children[0]);
-        rescurisveExpand(node.children[1]);
-      }
-
-    }
-
-    function collapseNode(cmmt) {
-      d3.select('graph-b .node[node-name="'+ cmmt.trim() + '"]').node().dispatchEvent(new Event('click'));
-    }
-
-    function computeCommitmentAndPopulate(userId) {
-      const trs = $('#users_table > tbody > tr');
-
-      let isFound = false,
-        commitment = '';
-        amount = 0;
-
-      for (i = 0; i < trs.length; i++) {
-        let ele = $(trs[i])
-        if (ele.find("td:eq(0)").text() == userId) {
-          isFound = true;
-          amount = ele.find("td:eq(1)").text().trim();
-          commitment = ele.find("td:eq(2)").text().trim();
-        }
-      }
-
-      if (isFound == true) {
-        $('#verify-commitment-compution').html('');
-        $('#verify-commitment-compution').append('<p id ="commitment-eq">\\(commitment_{user} = sha256(Id_{user} | balance_{user}) = sha256(' + userId + ' | ' + amount + ')\\)');
-        $('#verify-commitment-compution').append('<p id ="commitment-eq-2">\\(commitment_{user} = ' + commitment + '\\)');
-
-        MathJax.typeset(['#commitment-eq', '#commitment-eq-2']);
-      } else {
-        alert('error - cant find user name on the users table');
-        return "";
-      }
-
-      return commitment;
-    }
-
-    function updateGraphB(cmmt) {
-      expandAllNodesInVerifyGraph();
-
-      let currNode = d3.select('.node[node-name="'+ cmmt.trim() + '"]').datum();
-
-        while (currNode.parent) {
-          collapseNode(getNodeParnetOtherChild(currNode).commitment.trim());
-          currNode = currNode.parent;
-        }
-
-    }
-
-    const graphColor = ['#0E1766', '#710BC2', '#F63AAC', '#d281d2', '#7aa0cb', '#d281d2', '#000000', '#F6EBFF'];
-
-
-    // $("#nav-tree-tab").click(function () {
-    //   // table to array object
-    //   var convertedIntoArray = [];
-    //   $("table#users_table tbody tr").each(function () {
-    //     var rowData = {};
-    //     var actualData = $(this).find('td');
-    //     if (actualData.length > 0) {
-    //       actualData.each(function () {
-    //         if ($(this).hasClass("user-id")) {
-    //           rowData.userId = $(this).text();
-    //         } else if ($(this).hasClass("user-amount")) {
-    //           rowData.amount = Number($(this).text());
-    //         } else if ($(this).hasClass("user-commitment")) {
-    //           rowData.commitment = $(this).text();
-    //         }
-    //       });
-
-    //       convertedIntoArray.push(rowData);
-    //     }
-    //   });
-
-      
-    //   let treeArr = buildTree(convertedIntoArray);
-
-    //   updateVerifyPage(convertedIntoArray, treeArr);
-
-    //   let diagramData = treeArrToTreeData(treeArr);
-
-    //   buildDiagram(diagramData, "merkle-graph", "graph");
-
-    //   buildDiagram(diagramData, "merkle-graph-verifer", "graph-b");
-    // });
-
-    // function updateVerifyPage(convertedIntoArray, treeArr){
-    //   fillVerifyUserSelect(convertedIntoArray);
-    //   updateVerficationRootValue(treeArr[0].commitment);
-
-    // }
-
-    // function fillVerifyUserSelect(usersArr) {
-    //   var select = document.getElementById("user-verify-select"); 
-
-    //   var i, L = select.options.length - 1;
-    //   for (i = L; i >= 0; i--) {
-    //     select.remove(i);
-    //   }
-
-    //   var el = document.createElement("option");
-    //   el.textContent = "Choose a User";
-    //   el.value = "";
-    //   el.hidden = true;
-    //   el.disabled = true;
-    //   el.selected = true;
-    //   select.appendChild(el);
-
-    //   for (var i = 0; i < usersArr.length; i++) {
-    //     var opt = usersArr[i].userId;
-    //     el = document.createElement("option");
-    //     el.textContent = opt;
-    //     el.value = opt;
-    //     select.appendChild(el);
-    //   }
-    // }
-
-    // function updateVerficationRootValue(rootCommitment) {
-    //   $('#published-root-text').text(rootCommitment);
-    // }
-
-    function buildTree(records) {
-
-      // build leaf level 
-      let leafLevelLength = 1;
-      for (; leafLevelLength < records.length; leafLevelLength = leafLevelLength * 2) { }
-
-      let leafLevel = [];
-
-      for (let i = 0; i < leafLevelLength; i++) {
-
-        if (i < records.length) {
-          leafLevel.push({ commitment: records[i].commitment, amount: records[i].amount });
-        } else {
-          leafLevel.push({ commitment: sha256(""), amount: 0 });
-        }
-      }
-
-      let levels = [];
-      levels.push(leafLevel);
-
-      let currLevel = leafLevel
-      for (; currLevel.length > 1;) {
-
-        let nextLevel = [];
-        for (let i = 1; i < currLevel.length; i = i + 2) {
-          let amountsSum = currLevel[i - 1].amount + currLevel[i].amount;
-          let nextItem = { commitment: sha256(amountsSum + currLevel[i - 1].commitment + currLevel[i].commitment), amount: amountsSum };
-          nextLevel.push(nextItem);
-        }
-
-        levels.push(nextLevel);
-        currLevel = nextLevel;
-      }
-
-      let res = [];
-      for (let i = levels.length; i >= 0; i--) {
-        res.push.apply(res, levels[i]);
-      }
-
-      return res;
-    }
-
-    function treeArrToTreeData(array) {
-      let level = 0;
-      let idx = 1;
-      let res = { name: array[idx - 1].amount.toString(), fill: graphColor[level], subname: shortHash(array[level].commitment), commitment: array[idx - 1].commitment };
-      res.children = [];
-      // left child
-
-      let left = recursivee(idx + 1, level + 1, array);
-      if (left) {
-        res.children.push(left);
-      }
-
-      // right child
-      let right = recursivee(idx + 2, level + 1, array);
-      if (right) {
-        res.children.push(right);
-      }
-      return res;
-    }
-
-    function recursivee(idx, level, array) {
-      if (idx > array.length) {
-        return "";
-      }
-
-      let res = { name: array[idx - 1].amount.toString(), fill: graphColor[level], subname: shortHash(array[idx - 1].commitment), commitment: array[idx - 1].commitment };
-      res.children = [];
-
-      // left child
-      let left = recursivee(idx * 2, level + 1, array);
-      if (left) {
-        res.children.push(left);
-      }
-
-      // right child
-      let right = recursivee((idx * 2) + 1, level + 1, array);
-      if (right) {
-        res.children.push(right);
-      }
-
-      return res;
-    }
-
-    function buildDiagram(treeData, deployToComponenetId, deployToComponenetType, isCollapsedAtInit) {
-      const myNode = document.getElementById(deployToComponenetId);
-      myNode.innerHTML = '';
-
-      // Set the dimensions and margins of the diagram
-      var margin = { top: 20, right: 90, bottom: 30, left: 90 },
-        width = 960 - margin.left - margin.right,
-        height = 700;
-
-      // var svg = d3.select("graph").append("svg")
-      var svg = d3.select(deployToComponenetType).append("svg")
-        .attr("width", width + margin.right + margin.left)
-        .attr("height", height + margin.top + margin.bottom)
-        .append("g")
-        .attr("transform", "translate("
-          + margin.left + "," + margin.top + ")");
-
-      var i = 0,
-        duration = 750,
-        root;
-
-      // declares a tree layout and assigns the size
-      var treemap = d3.tree().size([height, width]);
-
-      // Assigns parent, children, height, depth
-      root = d3.hierarchy(treeData, function (d) { return d.children; });
-      root.x0 = height / 2;
-      root.y0 = 0;
-
-      // Collapse after the second level
-      if (isCollapsedAtInit == true) {
-        root.children.forEach(collapse);
-      }
-
-      update(root);
-
-      // Collapse the node and all it's children
-      function collapse(d) {
-        if (d.children) {
-          d._children = d.children
-          d._children.forEach(collapse)
-          d.children = null
-        }
-      }
-
-      function update(source) {
-
-        // Assigns the x and y position for the nodes
-        var treeData = treemap(root);
-
-        // Compute the new tree layout.
-        var nodes = treeData.descendants(),
-          links = treeData.descendants().slice(1);
-
-        // Normalize for fixed-depth.
-        nodes.forEach(function (d) { d.y = d.depth * 180 });
-
-        // Update the nodes...
-        var node = svg.selectAll('g.node')
-          .data(nodes, function (d) { return d.id || (d.id = ++i); });
-
-        // Enter any new modes at the parent's previous position.
-        var nodeEnter = node.enter().append('g')
-          .attr('class', 'node')
-          .attr("transform", function (d) {
-            return "translate(" + source.x0 + "," + source.y0 + ")";
-          })
-          .on('click', click);
-
-        var rectHeight = 60, rectWidth = 60;
-
-        nodeEnter.append('rect')
-          .on('click', click)
-          .attr('class', 'node')
-          .attr("width", rectWidth)
-          .attr("height", rectHeight)
-          .attr("x", 0)
-          .attr("stroke", "grey")
-          .attr("stroke-width", "2px")
-          .attr("y", (rectHeight / 2) * -1)
-          .attr("rx", "1")
-          .attr('node-name', d => d.data.commitment.trim())
-          .style("fill", function (d) {
-            return d.data.fill;
-          });
-
-
-        // Add labels for the nodes
-        nodeEnter.append('text')
-          .attr("dy", "-.35em")
-          .attr("x", function (d) {
-            return 20;
-          })
-          .attr("text-anchor", function (d) {
-            return "start";
-          })
-          .text(function (d) { return d.data.name; })
-          .append("tspan")
-          .attr("dy", "1.75em")
-          .attr("x", function (d) {
-            return 13;
-          })
-          .text(function (d) { return d.data.subname; }).attr("x", function (d) {
-            return 4;
-          });
-
-        // UPDATE
-        var nodeUpdate = nodeEnter.merge(node);
-
-        // Transition to the proper position for the node
-        nodeUpdate.transition()
-          .duration(duration)
-          .attr("transform", function (d) {
-            return "translate(" + d.x + "," + d.y + ")";
-          });
-
-        // Update the node attributes and style
-        nodeUpdate.select('circle.node')
-          .attr('r', 10)
-          .style("fill", function (d) {
-            return d._children ? "lightsteelblue" : "#fff";
-          })
-          .attr('cursor', 'pointer');
-
-
-        // Remove any exiting nodes
-        var nodeExit = node.exit().transition()
-          .duration(duration)
-          .attr("transform", function (d) {
-            return "translate(" + source.x + "," + source.y + ")";
-          })
-          .remove();
-
-        // On exit reduce the node circles size to 0
-        nodeExit.select('circle')
-          .attr('r', 1e-6);
-
-        // On exit reduce the opacity of text labels
-        nodeExit.select('text')
-          .style('fill-opacity', 1e-6);
-
-        // ****************** links section ***************************
-
-        // Update the links...
-        var link = svg.selectAll('path.link')
-          .data(links, function (d) { return d.id; });
-
-        // Enter any new links at the parent's previous position.
-        var linkEnter = link.enter().insert('path', "g")
-          .attr("class", "link")
-          .attr('d', function (d) {
-            var o = { x: source.x0, y: source.y0 }
-            return diagonal(o, o)
-          });
-
-        // UPDATE
-        var linkUpdate = linkEnter.merge(link);
-
-        // Transition back to the parent element position
-        linkUpdate.transition()
-          .duration(duration)
-          .attr('d', function (d) { return diagonal(d, d.parent) });
-
-        // Remove any exiting links
-        var linkExit = link.exit().transition()
-          .duration(duration)
-          .attr('d', function (d) {
-            var o = { x: source.x, y: source.y }
-            return diagonal(o, o)
-          })
-          .remove();
-
-        // Store the old positions for transition.
-        nodes.forEach(function (d) {
-          d.x0 = d.x;
-          d.y0 = d.y;
-        });
-
-        // Creates a curved (diagonal) path from parent to the child nodes
-        function diagonal(s, d) {
-
-          path = `M ${s.x + (rectWidth / 2)} ${s.y}
-              C ${(s.x + d.x) / 2 + (rectWidth / 2)} ${s.y},
-                ${(s.x + d.x) / 2 + (rectWidth / 2)} ${d.y},
-                ${d.x + (rectWidth / 2)} ${d.y}`
-
-          return path
-        }
-
-        // Toggle children on click.
-        function click(d) {
-          if (d.children) {
-            d._children = d.children;
-            d.children = null;
-          } else {
-            d.children = d._children;
-            d._children = null;
-          }
-          update(d);
-        }
-      }
-    }
-
-    function shortHash(hash) {
-      let trimmedHash = hash.trim();
-      let first = trimmedHash.substring(0, 3);
-      let last = trimmedHash.substring(trimmedHash.length - 3);
-      let res = first + '...' + last;
-
-      return res;
-    }
-
-  </script>
 
 </body>
 
